--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ addons:
 cache:
   directories:
     - $HOME/xtools/toolchain/5n
+    - $HOME/xtools/python2/5n
 
 install:
   - update-binfmts --display
@@ -28,6 +29,14 @@ install:
     tar -zxf $HOME/xtools/toolchain/5n/arm7-tools.tgz -C $HOME/xtools/toolchain/5n ;
     fi
   - $HOME/xtools/toolchain/5n/bin/arm-marvell-linux-gnueabi-gcc --version
+  - mkdir -p $HOME/xtools/python/5n
+  - if [ ! -f $HOME/xtools/python2/5n ]; then
+    wget -O $HOME/xtools/python2/5n/xpython.tgz https://github.com/droboports/python2/releases/download/v2.7.10/xpython2.tgz ;
+    fi
+  - if [ ! -d $HOME/xtools/python2/5n/bin ]; then
+    tar -zxf $HOME/xtools/python/5n/xpython.tgz -C $HOME/xtools/python2/5n ;
+    fi
+  - $HOME/xtools/python2/5n/bin/python --version
 
 script: ./build.sh
 
